scrollbar fix

--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -119,7 +119,12 @@ background: none;
 }
 
 img.nav-logo { 
-display: inline;
-max-width: 20%;
-margin: 5px;
-  }
+  display: inline;
+  max-width: 20%;
+  margin: 5px;
+}
+ 
+// browser scrollbar fix  
+html { 
+  overflow-y: scroll; 
+}
